info_TEXINFOS = \
 mailutils.texi 

EXTRA_DIST = \
 rfc1734.txt \
 rfc1939.txt \
 rfc1957.txt \
 rfc2060.txt \
 rfc2449.txt \
 attribute.texi \
 auth.texi \
 body.texi \
 encoding.texi \
 headers.texi \
 locker.texi \
 mailbox.texi \
 mailer.texi \
 sfrom.c.texi \
 stream.texi \
 url.texi \
 version.texi

